[gd_scene load_steps=11 format=2]

[ext_resource path="res://Script/Overworld.gd" type="Script" id=1]
[ext_resource path="res://Objects/Stage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/MapBounds.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/OverworldMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Script/UI/OverworldDebugWindow.gd" type="Script" id=5]
[ext_resource path="res://Objects/UI/StageDescWindow.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/UI/PlayerStats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/UI/OverworldMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/UI/UnitUnlockScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/UI/ReforestMenu.tscn" type="PackedScene" id=10]

[node name="Overworld" type="Spatial"]
script = ExtResource( 1 )
battle_path = "res://Objects/Main.tscn"
stages_path = NodePath("Stages")
menu_path = NodePath("UI/OverworldMenu")

[node name="Stages" type="Spatial" parent="."]

[node name="Stage" parent="Stages" instance=ExtResource( 2 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -73.172, 0.618376, 60.0545 )
map_to_load = "res://Maps/Level1.tscn"
stage_name = "Introdução"
difficulty = 1
description = "Descrição da fase \"Teste\""
types_available = [ 2, 3 ]

[node name="Stage2" parent="Stages" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -73.172, 0.659104, 67.9067 )
map_to_load = "res://Maps/Level2.tscn"
stage_name = "Um tempo atrás..."
difficulty = 1
description = "Muito fácil"

[node name="Stage3" parent="Stages" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -63.0416, 0.717646, 74.2398 )
map_to_load = "res://Maps/Level3.tscn"
stage_name = "Teste de força"
difficulty = 3
description = "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
unlock_requirements_paths = [ NodePath("../Stage2"), NodePath("../Stage") ]

[node name="MapBounds" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.388, 0, 0, 0, 5.416, 0, 0, 0, 1.045, -21.4657, -5.455, 43.9263 )

[node name="OverworldMap" parent="." instance=ExtResource( 4 )]
transform = Transform( 100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0 )

[node name="DebugWindow" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="Button" type="Button" parent="DebugWindow"]
margin_left = 9.3308
margin_top = 538.854
margin_right = 199.331
margin_bottom = 586.854
text = "Save Game"

[node name="Button2" type="Button" parent="DebugWindow"]
margin_left = 222.0
margin_top = 539.0
margin_right = 397.0
margin_bottom = 589.0
text = "ADD"

[node name="TextEdit" type="TextEdit" parent="DebugWindow/Button2"]
margin_left = 183.0
margin_top = -2.0
margin_right = 439.0
margin_bottom = 44.0

[node name="Button3" type="Button" parent="DebugWindow"]
margin_left = 221.0
margin_top = 470.864
margin_right = 399.0
margin_bottom = 529.864
text = "Clear"

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="StageDescWindow" parent="UI" instance=ExtResource( 6 )]
visible = false

[node name="PlayerStats" parent="UI" instance=ExtResource( 7 )]
margin_right = -30.0
margin_bottom = 550.0
unlock_path = NodePath("../UnitUnlockScreen")

[node name="OverworldMenu" parent="UI" instance=ExtResource( 8 )]
visible = false

[node name="UnitUnlockScreen" parent="UI" instance=ExtResource( 9 )]
visible = false
margin_right = 990.0
margin_bottom = 560.0
unlockable_units = [ "Arapaso", "Kokama", "Unit", "Uni", "T", "unisinos", null, null, null, "", "", "", "", "", "", "", "", "", "", "" ]

[node name="ReforestMenu" parent="UI" instance=ExtResource( 10 )]
visible = false
[connection signal="button_up" from="DebugWindow/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="DebugWindow/Button2" to="." method="_on_Button2_button_up"]
[connection signal="button_up" from="DebugWindow/Button3" to="." method="_on_Button3_button_up"]
